Fix disabled form styling in Dark Mode

--- a/src/assets/sass/modules/_buttons.scss
+++ b/src/assets/sass/modules/_buttons.scss
@@ -310,6 +310,15 @@ ul.nav-tertiary {
     }
 }
 
+@media (prefers-color-scheme: dark) {
+    .nav-tertiary .navlink-active,
+    .filtered button.ui-corner-right {
+        &:focus {
+            border-color: $dark-color-link-focus;
+        }
+    }
+}
+
 /**
  * Search widget 'search' button.
  *
