--- a/src/assets/sass/modules/_forms.scss
+++ b/src/assets/sass/modules/_forms.scss
@@ -46,15 +46,6 @@ input {
 }
 
 /**
- * Show the overflow in Edge.
- */
-
-button,
-input {
-    overflow: visible;
-}
-
-/**
  * 1. Prevent elements from spilling out of their parent.
  * 2. Address margins set differently in Firefox 4+, Safari, and Chrome.
  * 3. Correct font properties not being inherited.
@@ -504,7 +495,6 @@ textarea.code {
  * Make sure disabled elements really are disabled and styled appropriately.
  *
  * 1. Re-set default cursor for disabled elements.
- * 2. Override default iOS opacity setting.
  */
 
 [disabled],
@@ -513,17 +503,22 @@ textarea.code {
 .txp-button.disabled,
 .navlink-disabled,
 .ui-checkboxradio-disabled {
-    border-color: $color-border-light !important;
-    background: $color-background-form-disabled !important;
-    color: $color-text-form-disabled !important;
+    border: 1px solid $color-border !important;
+    background-color: $color-background-form-disabled !important;
     box-shadow: none !important;
-    /* 1 */
-    cursor: default !important;
-    /* 2 */
-    opacity: 1;
+    cursor: default !important; /* 1 */
+    opacity: 0.33 !important;
+}
 
-    .ui-icon {
-        opacity: 0.33 !important;
+@media (prefers-color-scheme: dark) {
+    [disabled],
+    [disabled] option,
+    [disabled] optgroup,
+    span.disabled,
+    .ui-checkboxradio-disabled {
+        border: 1px solid $dark-color-border !important;
+        background-color: $dark-color-background-form-disabled !important;
+        opacity: 0.25 !important;
     }
 }
 
